# QtDeyeEconomy

./: .gitignore  .pylintrc  ElectricityPrices.xlsx  README.md  __init__.py  config.json  pyproject.toml  requirements.txt  resources_rc.py
resources/: resources.qrc
src/: config_loader.py  main.py  styles.py  test.py  utils.py
src/controllers/: download_window_controller.py  main_window_controller.py
src/models/: daily_device_table.py  device.py  deye_account.py  electricity_price.py  monthly_device_table.py  progress.py  user.py  yearly_device_table.py
src/tests/: test_utils.py
src/views/: download_window_view.py  main_window_view.py
ui/: download_dialog.ui  main_window.ui  ui_DownloadDialog.py  ui_MainWindow.py
