[project]
name = "qtdeyeeconomy"
version = "0.1.0"
description = "Get the most important data from your Deye inverter and track electricity economics in one beautiful interface"
authors = [
    {name = "Maksym Osinskyi",email = "maximosinskiy@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pyside6 (>=6.9.1,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "xlwings (>=0.33.15,<0.34.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
